tests/compile_fail/ktstr_test_int_not_int.stderr
error: expected integer literal
 --> tests/compile_fail/ktstr_test_int_not_int.rs:6:21
  |
6 | #[ktstr_test(llcs = "two")]
  |                     ^^^^^

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_int_not_int.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_int_not_int.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_int_not_int.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
